--- a/style.scss
+++ b/style.scss
@@ -49,3 +49,21 @@ h1, p {
     }
   }
 }
+
+.about {
+  .content {
+    > div {
+      border: 1px solid black;
+      display: flex;
+      > div {
+        width: 50%;
+        justify-content: center;
+        align-items: center;
+      }
+      :nth-child(2n) {
+        display: flex;
+        text-align: right;
+      }
+    }
+  }
+}
